# ipedb

./: .gitignore  README.md  ipedb.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/IpeDb/: InfoProv.hs  Main.hs  Options.hs  Query.hs  Table.hs  Types.hs
src/IpeDb/Eventlog/: Index.hs
