cabal-version: 3.6
name: ipedb
version: 0.1.0.0
license: BSD-3-Clause
author: Hannes Siebenhandl, Matthew Pickering
synopsis: Generate a database for IPE data.
description: Tool and library to index an `.eventlog` file and query IPE data.
maintainer: hannes@well-typed.com
build-type: Simple
extra-doc-files: CHANGELOG.md
category: Development
tested-with:
  ghc ==9.10
  ghc ==9.12

common warnings
  ghc-options:
    -Wall
    -Wunused-packages

common defaults
  default-language: GHC2021
  default-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NoFieldSelectors
    OverloadedRecordDot
    TypeApplications

library
  import: warnings, defaults
  exposed-modules:
    IpeDb.Eventlog.Index
    IpeDb.InfoProv
    IpeDb.Main
    IpeDb.Options
    IpeDb.Table
    IpeDb.Types

  build-depends:
    base >=4.20 && <4.23,
    ghc-events >=0.18 && <0.21,
    optparse-applicative >=0.16.1 && <0.20,
    sqlite-simple ^>=0.4.19.0,
    text ^>=2.1.2,

  hs-source-dirs: src
  default-language: Haskell2010

executable ipedb
  import: warnings, defaults
  main-is: Main.hs
  build-depends:
    base >=4.20 && <4.23,
    ipedb,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite ipedb-test
  import: warnings, defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.20 && <4.23,
    ipedb,

source-repository head
  type: git
  location: https://github.com/well-typed/ipedb.git
